[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Game/Character/Kanto_Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Game/Character/Movement2.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.287147, 0.803936, 0.338472 )

[node name="Character" type="Spatial"]
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0 )

[node name="KinematicBody" type="KinematicBody" parent="Player"]

[node name="CollisionShape" type="CollisionShape" parent="Player/KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, 1.5, 0 )
shape = SubResource( 1 )

[node name="Lane0" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="Lane1" type="Spatial" parent="."]

[node name="Lane2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )
